# CV2026

./: .gitignore  000001.txt  000003.txt  000005.txt  000007.txt  000013.txt  000015.txt  000017.txt  000018.txt  000021.txt  000035.txt  000039.txt  000040.txt  000041.txt  000044.txt  000049.txt  000061.txt  000065.txt  000066.txt  000070.txt  000074.txt  000076.txt  000078.txt  000081.txt  000083.txt  000085.txt  000086.txt  000087.txt  000094.txt  000095.txt  000100.txt  000105.txt  000107.txt  000113.txt  000115.txt  000121.txt  000127.txt  000133.txt  000134.txt  000143.txt  (+65 more)
convnext/: train.ipynb
data/rec1_trajectories/: 000002.txt  000004.txt  000006.txt  000008.txt  000010.txt  000012.txt  000019.txt  000022.txt  000023.txt  000028.txt  000031.txt  000032.txt  000034.txt  000038.txt  000042.txt  000043.txt  000045.txt  000050.txt  000055.txt  000060.txt  000062.txt  000067.txt  000068.txt  000069.txt  000072.txt  000079.txt  000084.txt  000090.txt  000092.txt  000093.txt  000099.txt  000101.txt  000102.txt  000109.txt  000111.txt  000114.txt  000119.txt  000120.txt  000122.txt  000124.txt  (+191 more)
memory/: MEMORY.md  hpc-training-setup.md
output/training/: copy-files.sh
output/training/summaries/: 01-initial-training.json  02-cleaned-data-only-automatic.json  03-cleaned-data-manual-080.json  03-cleaned-data-manual-100.json  04-err-cbrt-100.json  (+2 more)
src/: preprocessing.ipynb  preprocessing.py
src/common/: bee_dataset.py
src/ronny/: classify.py  train.ipynb
src/simon/: __init__.py  aggregate_cv.py  bench_loader.py  config.py  orientation.py  train.py  train.slurm
(+122 files in other folders)
