[project]
name = "cv2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "ruff>=0.15.20",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
